--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,17 +22,25 @@
     "baseUrl": ".",
     "paths": {
       "@components/*": ["src/components/*"],
-      "@assets/*"    : ["src/assets/*"],
-      "@layouts/*"   : ["src/layouts/*"],
-      "@pages/*"     : ["src/pages/*"],
-      "@services/*"  : ["src/services/*"],
-      "@styles/*"    : ["src/styles/*"],
-      "@utils/*"    : ["src/utils/*"],
-      "@types/*"    : ["src/types/*"],
-      "@store/*"    : ["src/store/*"],
-      "@api/*"    : ["src/pages/api/*"],
+      "@assets/*": ["src/assets/*"],
+      "@layouts/*": ["src/layouts/*"],
+      "@pages/*": ["src/pages/*"],
+      "@services/*": ["src/services/*"],
+      "@styles/*": ["src/styles/*"],
+      "@utils/*": ["src/utils/*"],
+      "@types/*": ["src/types/*"],
+      "@store/*": ["src/store/*"],
+      "@api/*": ["src/pages/api/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/pages/_app.jsx", "src/services/emailService.js", "src/pages/preview/[_id]/index.jsx"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "src/pages/_app.jsx",
+    "src/services/emailService.js",
+    "src/pages/preview/[_id]/index.tsx"
+  ],
   "exclude": ["node_modules"]
 }
