--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "scripts": {
     "dev": "next dev -p 3001 -H 10.88.0.103",
     "build": "next build",
+    "build:dev": "env-cmd -f .env.development yarn build",
+    "build:uat": "env-cmd -f .env.staging yarn build",
+    "build:prod": "env-cmd -f .env.production yarn build",
     "start": "next start -p 3001",
     "lint": "next lint",
     "build:serve": "next build & next start -p 3001 -H 10.88.0.103"
@@ -18,6 +21,7 @@
     "aos": "^2.3.4",
     "autoprefixer": "10.4.14",
     "axios": "1.3.4",
+    "env-cmd": "^10.1.0",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
     "mini-css-extract-plugin": "^2.7.6",
