--- a/package.json
+++ b/package.json
@@ -3,14 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 3001 -H 10.88.0.103",
+    "dev": "next dev -p 3000 -H 10.88.0.103",
     "build": "next build",
     "build:dev": "env-cmd -f .env.development yarn build",
+    "build:dev:local": "env-cmd -f .env.development.local yarn build",
     "build:uat": "env-cmd -f .env.staging yarn build",
+    "build:uat:local": "env-cmd -f .env.staging.local yarn build",
     "build:prod": "env-cmd -f .env.production yarn build",
-    "start": "next start -p 3001",
+    "build:prod:local": "env-cmd -f .env.production.local yarn build",
+    "start": "next start -p 3000",
     "lint": "next lint",
-    "build:serve": "next build & next start -p 3001 -H 10.88.0.103"
+    "build:serve": "next build & next start -p 3000 -H 10.88.0.103"
   },
   "dependencies": {
     "@emailjs/browser": "^3.10.0",
