--- a/.env.production
+++ b/.env.production
@@ -10,7 +10,7 @@ NEXT_PUBLIC_EMAIL_SERVICE_KEY =
 NEXT_PUBLIC_EMAIL_TEMPLATE_KEY =
 NEXT_PUBLIC_EMAIL_PUBLIC_KEY =
 
-NEXT_PUBLIC_ADVERTISING=https://trend.musense.tw/trend/p_64e848908efeac5a214d74a8.html
-NEXT_PUBLIC_SEO=https://trend.musense.tw/trend/p_64e850dd8efeac5a214d7c98.html
-NEXT_PUBLIC_SOCIAL_MEDIA=https://trend.musense.tw/trend/p_64e84cd18efeac5a214d7816.html
-NEXT_PUBLIC_CIS=https://trend.musense.tw/trend/p_64e84e5b8efeac5a214d7995.html
+NEXT_PUBLIC_ADVERTISING=https://www.musense.tw/trend/p_64e848908efeac5a214d74a8.html
+NEXT_PUBLIC_SEO=https://www.musense.tw/trend/p_64e850dd8efeac5a214d7c98.html
+NEXT_PUBLIC_SOCIAL_MEDIA=https://www.musense.tw/trend/p_64e84cd18efeac5a214d7816.html
+NEXT_PUBLIC_CIS=https://www.musense.tw/trend/p_64e84e5b8efeac5a214d7995.html
