--- a/.env.development
+++ b/.env.development
@@ -6,9 +6,9 @@ NEXT_PUBLIC_KEYWORDS = DEV, 陌聲行銷, dev, FB廣告代操, DEV, 廣告投放
 NEXT_PUBLIC_SITE = http://10.88.0.103:3000
 NEXT_PUBLIC_TREND_SITE=http://10.88.0.103:3000/trend
 
-NEXT_PUBLIC_EMAIL_SERVICE_KEY = service_wt5sued
-NEXT_PUBLIC_EMAIL_TEMPLATE_KEY = template_ov59lti
-NEXT_PUBLIC_EMAIL_PUBLIC_KEY = 3J0CP1LYb-vJKxViN
+NEXT_PUBLIC_EMAIL_SERVICE_KEY =
+NEXT_PUBLIC_EMAIL_TEMPLATE_KEY =
+NEXT_PUBLIC_EMAIL_PUBLIC_KEY =
 
 NEXT_PUBLIC_ADVERTISING=http://10.88.0.103:3000/trend/p_3453.html
 NEXT_PUBLIC_SEO=http://10.88.0.103:3000/trend/p_123123123.html
