--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
       - add_ssh_keys:
           fingerprints:
-            - $VM_SSH_FINGERPRINT
+            - $UAT_VM_SSH_FINGERPRINT
       - run:
           name: Deploy to GCP Compute Engine
           command: |
