discard seo and fill in event-planning

--- a/.env.development
+++ b/.env.development
@@ -11,6 +11,6 @@ NEXT_PUBLIC_EMAIL_TEMPLATE_KEY =
 NEXT_PUBLIC_EMAIL_PUBLIC_KEY =
 
 NEXT_PUBLIC_ADVERTISING=http://10.88.0.103:3000/trend/p_3453.html
-NEXT_PUBLIC_SEO=http://10.88.0.103:3000/trend/p_123123123.html
+NEXT_PUBLIC_EVENT_PLANNING=http://10.88.0.103:3000/trend
 NEXT_PUBLIC_SOCIAL_MEDIA=http://10.88.0.103:3000/trend/p_646b3fd12882d5ee14d82c3f.html
 NEXT_PUBLIC_CIS=http://10.88.0.103:3000/trend/p_64c722c03d0f46de29d32368.html
