--- a/.env.staging
+++ b/.env.staging
@@ -11,6 +11,6 @@ NEXT_PUBLIC_EMAIL_TEMPLATE_KEY =
 NEXT_PUBLIC_EMAIL_PUBLIC_KEY =
 
 NEXT_PUBLIC_ADVERTISING=http://uat-front.musense.tw/trend/p_art-02.html
-NEXT_PUBLIC_SEO=http://uat-front.musense.tw/trend/p_64ad28147a7bccf00ac0a772.html
+NEXT_PUBLIC_EVENT_PLANNING=http://uat-front.musense.tw/trend
 NEXT_PUBLIC_SOCIAL_MEDIA=http://uat-front.musense.tw/trend/p_64e42e772fe56d8c41577551.html
 NEXT_PUBLIC_CIS=http://uat-front.musense.tw/trend/p_64c0e295f7171821fee8bc40.html
